Fixes and Enhancements since Version 0.5 alpha 2

 Changed, Enhanced, or Newly Deprecated Features

 - Added 'config.Namespace()' convenience class for redirecting property
   lookups from one namespace to another.  See the docstring and 'peak.ini' for
   usage examples.  'PropertyName.of()' now returns 'Namespace' instances
   instead of 'PropertySet' instances.

 - DEPRECATED the 'config.PropertySet' class; please convert to using
   'config.Namespace', as it will disappear in the 0.5alpha4 release cycle.

 - SQL connection objects now get their type converters from a distinct
   property namespace for each DBAPI driver.  For example a driver using the
   'cx_Oracle' module will get its type converters from the
   'cx_Oracle.sql_types' property namespace, instead of 'peak.sql_types'.  For
   backward compatibility, these driver-specific namespaces are set up to
   fall back to 'peak.sql_types' for their defaults.  Type converter
   construction has also been improved, to eliminate conversion overhead
   completely when no conversions are required for a specific query.  Also,
   SQL connections now offer a method that will create a row conversion
   function for a given result description and optional postprocessing
   function.  This new method should now be used in place of direct access to
   the 'typeMap' attribute of connection objects.

 - Added 'binding.Require', 'binding.Obtain', 'binding.Make', and
   'binding.Delegate'.  *ALL* other binding types are now DEPRECATED, and will
   go away before 0.5 beta is released:

   'requireBinding("info")' -- use 'Require("info")'

   'delegateTo("attr")' -- use 'Delegate("attr")'

   'New(type)' -- use 'Make(type)'

   'New("module.type")' -- use 'Make("module.type")'

   'bindTo(key)' -- use 'Obtain(key)'

   'Constant(value)' -- use 'Make(lambda: value)'

   'Acquire(key)' -- use 'Obtain(key, offerAs=[key])'

   'Copy(value)' -- use 'Make(lambda: <expr to copy value>)'
